--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url= jdbc:mysql://localhost:3306/quiz?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+
+server.port = 8081
+
+spring.jpa.hibernate.ddl-auto=update
 
